--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "name": "react-native-wrapped-text",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "react native word wrap text component for support korean",
   "main": "./src/index.js",
+  "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bang9/react-native-wrapped-text"
+  },
   "scripts": {
     "build": "tsc",
+    "deploy": "tsc && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "bang9 <gusrn1423@naver.com> (https://github.com/bang9)",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.11.0",
-    "react-native": "^0.61.4"
+    "react": "*",
+    "react-native": ">=0.54"
   },
   "devDependencies": {
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.22",
     "typescript": "^3.7.2"
   },
-  "keywords": []
+  "keywords": [
+      "react",
+      "react-native",
+      "word-wrap",
+      "line-break",
+      "korean"
+  ]
 }
