--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "react native word wrap text component for support korean",
   "main": "./src/index.js",
-  "types": "index.d.ts",
+  "types": "./src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bang9/react-native-wrapped-text"
