--- a/package.json
+++ b/package.json
@@ -1,34 +1,50 @@
 {
-  "name": "react-native-wrapped-text",
-  "version": "1.1.0",
-  "description": "react native word wrap text component for support korean",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bang9/react-native-wrapped-text"
-  },
-  "scripts": {
-    "build": "tsc",
-    "deploy": "tsc && npm publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "bang9 <gusrn1423@naver.com> (https://github.com/bang9)",
-  "license": "ISC",
-  "peerDependencies": {
-    "react": "*",
-    "react-native": ">=0.54"
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
-    "typescript": "^3.7.2"
-  },
-  "keywords": [
-      "react",
-      "react-native",
-      "word-wrap",
-      "line-break",
-      "korean"
-  ]
+    "name": "react-native-wrapped-text",
+    "version": "1.1.0",
+    "description": "react native word wrap text component for support korean",
+    "main": "./src/index.js",
+    "types": "./src/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Bang9/react-native-wrapped-text"
+    },
+    "scripts": {
+        "build": "tsc",
+        "deploy": "tsc && npm publish",
+        "fix": "yarn fix:tslint && yarn fix:prettier",
+        "fix:tslint": "tslint --project tsconfig.json --fix",
+        "fix:prettier": "prettier --write \"**/*.{ts,tsx,js}\"",
+        "lint": "yarn lint:tslint && yarn lint:prettier",
+        "lint:tslint": "tslint --project tsconfig.json",
+        "lint:prettier": "prettier --check \"**/*.{ts,tsx,js}\""
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn fix:tslint && pretty-quick --staged"
+        }
+    },
+    "author": "bang9 <gusrn1423@naver.com> (https://github.com/bang9)",
+    "license": "ISC",
+    "peerDependencies": {
+        "react": "*",
+        "react-native": ">=0.54"
+    },
+    "devDependencies": {
+        "@types/react": "^16.9.11",
+        "@types/react-native": "^0.60.22",
+        "husky": "^3.1.0",
+        "prettier": "^1.19.1",
+        "pretty-quick": "^2.0.1",
+        "tslint": "^5.20.1",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^3.7.2"
+    },
+    "keywords": [
+        "react",
+        "react-native",
+        "word-wrap",
+        "line-break",
+        "korean"
+    ],
+    "dependencies": {}
 }
